--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "private": true,
   "proxy": "http://localhost:5001",
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@fontsource/inter": "^5.0.18",
+    "@mui/icons-material": "^5.15.19",
+    "@mui/joy": "^5.0.0-beta.36",
     "axios": "^0.21.1",
     "express": "^4.18.2",
     "pg": "^8.2.1",
@@ -21,7 +26,7 @@
     "vitest": "^1.1.0"
   },
   "scripts": {
-    "start": "node server/server.js | vite",
+    "start": "node server/server.js | vite --host",
     "client": "vite",
     "server": "nodemon --watch server server/server.js",
     "test": "vitest",
