--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^7.2.9",
+    "react-redux-loading-bar": "^5.0.8",
+    "react-redux-progress": "^2.2.4",
     "react-router-dom": "^5.3.4",
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6"
