--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mui/joy": "^5.0.0-beta.36",
     "axios": "^0.21.1",
     "express": "^4.18.2",
+    "moment": "^2.30.1",
     "pg": "^8.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
