--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@mui/icons-material": "^5.15.19",
     "@mui/joy": "^5.0.0-beta.36",
     "axios": "^0.21.1",
+    "bootstrap": "^5.3.3",
     "express": "^4.18.2",
     "pg": "^8.2.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-redux": "^7.2.9",
     "react-router-dom": "^5.3.4",
